--- a/MainProject/Views/Home/Index.cshtml
+++ b/MainProject/Views/Home/Index.cshtml
@@ -1,33 +1,34 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<MainProject.Models.New>
+
+@{
+    ViewBag.Title = "UDB+";
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
-
+    <div class="row justify-content-md-center">
+        <div class="col col-lg-4">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/GzBX2hSOll0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
     <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
+        @foreach (var item in Model)
+        {
+
+            <div class="col col-md-4">
+                <div class="d-flex justify-content-center">
+                    <div>
+                        <h2>
+                            @Html.DisplayFor(modelItem => item.Title)
+                        </h2>
+                        <p>
+                            @Html.DisplayFor(modelItem => item.Content)
+                        </p>
+                        <p>
+                            @Html.DisplayFor(modelItem => item.PublishDate)
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
 </main>
