:sparkles: Add news views

--- a/MainProject/Views/Shared/_Layout.cshtml
+++ b/MainProject/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Noticias", "Index", "News", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Carreras", "Index", "Careers", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contáctanos", "Create", "Contacts", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
